--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@ root: ./
           border: 5px solid #FFFFFF;"> 
 -->
         <div class="container-fluid">
-            <img src="images/Eddy_Shday_Dima_Materials_Conference.jpg" width="80%"/>
+            <img src="images/Eddy_Shday_Dima_Materials_Conference.jpeg" width="80%"/>
         </div>
 <!--
           </div>
