--- a/index.html
+++ b/index.html
@@ -5,16 +5,24 @@ custom_js: top_publications
 root: ./
 ---
 
-<div class="row text-center"> <!-- row of header -->
+<!-- ====== First centered image ====== -->
+<div class="row text-center">
   <div class="container-fluid" style="text-align: center;">
-    <!-- Centered second image -->
-    <img src="images/Eddy_Shday_Dima_Materials_Conference.jpeg" width="80%" style="display: block; margin: 0 auto;"/>
+    <img src="images/first_image.jpeg" width="80%" style="display: block; margin: 0 auto;" alt="First image"/>
   </div>
-</div> <!-- end of row of header -->
+</div>
+
+<!-- ====== Second centered image ====== -->
+<div class="row text-center">
+  <div class="container-fluid" style="text-align: center; margin-top: 20px;">
+    <img src="images/Eddy_Shday_Dima_Materials_Conference.jpeg" width="80%" style="display: block; margin: 0 auto;" alt="Second image"/>
+  </div>
+</div>
 
 <!--
   Everything below this line is commented out as requested
   --------------------------------------------------------
+
 <div class="row">  <!-- row of first page content -->
   <div class="col-md-6"> <!-- news -->
     <h1>News</h1>
